# cerulean

./: .gitignore  LICENSE  README.md  TODO.md
backend/: builtins.py  ceruleanIRAST.py  ceruleanIRBackendCompiler.py  ceruleanIRBuilder.py  ceruleanIRCompiler.py  cerulean_ir_compiler.py  codegen_amyasm.py  codegen_x86.py  compiler.py  irEmitter.py  irTypes.py  parser.py  printVisitor.py  semanticAnalyzer.py  semantic_analyzer.py  symbolTable.py  tokenizer.py  typeUtils.py  visitor.py
backend_compilers/: CeruleanIR_BuiltinLib.amyasm  CeruleanIR_BuiltinLib.asm  a.amy.assembly  ast.py  build.sh  preprocessor.py  print_visitor.py  symbol_table.py  visitor.py
cerulean/: CeruleanBuiltinLib_x86.asm  builtins.py  ceruleanAST.py  ceruleanCompiler.py  codegen.py  compiler.py  irGenerator.py  parser.py  preprocessor.py  printVisitor.py  semanticAnalyzer.py  semanticAnalyzerStage2.py  symbolTable.py  template.py  tokenizer.py  types.py  visitor.py
ceruleanasm/: AST.py  README.md  addressAssigner.py  assembler.py  bytecodeGenerator.py  lowering.py  modifiers.py  opcodes.py  parser.py  printVisitor.py  pseudoInstructions.py  referenceResolver.py  semanticAnalysis.py  tokenizer.py  visitor.py
ceruleanir/: ceruleanIRCompiler.py  compiler.py  parser.py  tokenizer.py
ceruleanrisc/vm/: CMakeLists.txt  README.md
ceruleanrisc/vm/lib/: criscvm.hpp  debugger.hpp  disassembler.hpp  instruction_info.hpp  instruction_registry.hpp  loader.hpp  memory_manager.hpp  opcode.hpp  register_file.hpp
ceruleanrisc/vm/src/: criscvm.cpp  debugger.cpp  instruction_registry.cpp  loader.cpp  main.cpp
ceruleanrisc/vm/tests/: main.cpp  test_arithmetic.cpp  test_arithmetic_float.cpp  test_comparisons.cpp  test_control_flow.cpp  test_conversions.cpp  test_helloworld1.cpp  test_helloworld2.cpp  test_helloworld3.cpp  test_helloworld4.cpp  test_loadstore.cpp
ceruleanrisc/vm/tools/: ceruleanvm_dbg.cpp  emit_helloworld.cpp
ceruleanvm/: CMakeLists.txt  README.md
ceruleanvm/lib/: ceruleanvm.hpp  debugger.hpp  memory_manager.hpp  opcode.hpp  syscall.hpp
ceruleanvm/src/: TMP_AMYBIN.cpp  ceruleanvm.cpp  debugger.cpp  disassembler.cpp  instruction_registry.cpp  main.cpp  memory_manager.cpp
ceruleanvm/test_files/: helloworld.ceruleanbc
ceruleanvm/tests/: main.cpp  tee_buf.hpp  test_arithmetic.cpp  test_arithmetic_float.cpp  test_comparisons.cpp  test_control_flow.cpp  test_conversions.cpp  test_framework.hpp  test_helloworld.cpp  test_helloworld1.cpp  test_helloworld2.cpp  test_helloworld3.cpp  test_helloworld4.cpp  test_loadstore.cpp
ceruleanvm/tools/: ceruleanvm_dbg.cpp  emit_helloworld.cpp
(+258 files in other folders)
